<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="algorithms">
        <item>MD5</item>
        <item>SHA1</item>
        <item>SHA256</item>
        <item>SHA512</item>
    </string-array>
</resources>