<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/issuer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:ellipsize="end"
        android:gravity="start|center"
        android:singleLine="true"
        android:text="@string/issuer_hint"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="start|center"
        android:singleLine="true"
        android:text="@string/label_hint"
        android:textSize="12sp"
        android:textStyle="normal" />
</merge>
