...
			android:padding="8dp"
			android:gravity="center"
			android:visibility="gone"
			android:text="@string/no_keys" />
	</androidx.core.widget.NestedScrollView>
	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/token_list"
		android:visibility="gone"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:clipToPadding="false"
		android:paddingBottom="@dimen/token_list_bottom_padding"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
...
